--- a/src/pages/home.module.scss
+++ b/src/pages/home.module.scss
@@ -1,1 +1,82 @@
 // TODO
+
+.container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+
+}
+
+.wrap{
+    width: 100%;
+    max-width: 700px;
+    margin-top: 4.5rem;
+
+    img{
+        width: 230px;
+        margin-bottom: 3.5rem;
+    }
+
+    .post{
+        strong{
+            font-size: 1.7rem;
+            font-weight: bold;
+
+            margin-bottom: 8px;
+
+            transition: all .2s;
+        }
+
+        a:hover{
+            color: var(--pink-500);
+        }
+
+        p{
+            color: var(--gray-100);
+
+            display: flex;
+            align-items: center;
+
+            gap: 8px;
+ 
+            font-size: 1.1rem;
+        }
+
+    }
+
+    .details{
+        display: flex;
+        align-items: center;
+        justify-content: flex-start;
+
+        gap: 1.5rem;
+
+        margin-top: 1.2rem;
+
+        p{
+            font-size: 0.9rem;
+        }
+
+        margin-bottom: 2.5rem;
+    }
+
+    .loadMore{
+        color: var(--pink-500);
+
+        font-weight: 600;
+        font-size: 1.15rem;
+
+        margin-top: 60px;
+
+        transition: filter .2s;
+
+        &:hover{
+            color: #e64d9e;
+        }
+    }
+
+    .hidden{
+        display: none;
+    }
+}
