--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -1,1 +1,13 @@
 // TODO
+.container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    section{
+        width: 100%;
+        max-width: 720px;
+
+        padding: 2.5rem 0;
+    }
+}
