--- a/src/pages/post/post.module.scss
+++ b/src/pages/post/post.module.scss
@@ -1,1 +1,78 @@
-// TODO
+.banner {
+    width: 100%;
+    height: 400px;
+
+    overflow: hidden;
+
+    img {
+        width: 100%;
+    }
+}
+
+.container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+
+    margin-top: 4rem;
+
+    .titleWrap {
+        width: 100%;
+        max-width: 720px;
+
+        strong {
+            font-size: 3rem;
+        }
+
+        section {
+            display: flex;
+            align-items: center;
+            justify-content: flex-start;
+
+            margin-top: 1.5rem;
+
+            span {
+                display: flex;
+                align-items: center;
+
+                gap: 8px;
+
+                margin-right: 1.5rem;
+            }
+        }
+    }
+
+    .content {
+        margin-top: 4rem;
+        width: 100%;
+        max-width: 720px;
+
+        article {
+            width: 100%;
+
+            strong {
+                font-size: 2rem;
+            }
+
+            div {
+                margin: 2rem 0 2.5rem 0;
+
+                p, span, li, ul, ol {
+                    color: var(--gray-100);
+                    font-size: 1.2rem;
+                    margin: 1.5rem 0;
+                }
+
+                a {
+                    font-size: 1.2rem;
+                    color: var(--pink-500);
+                }
+
+                strong {
+                    font-size: 1.2rem;
+                }
+            }
+        }
+    }
+}
