--- a/src/pages/post/post.module.scss
+++ b/src/pages/post/post.module.scss
@@ -4,6 +4,10 @@
 
     overflow: hidden;
 
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
     img {
         width: 100%;
     }
